idea/testData/checker/RecursiveTypeInference.jet
package a {
    val foo = bar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo</error>
}

package b {
    fun foo() = bar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo()</error>
}

package c {
    fun bazz() = bar()

    fun foo() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">bazz()</error>

    fun bar() = foo()
}

package ok {

    package a {
        val foo = bar()

        fun bar() : Int = foo
    }

    package b {
        fun foo() : Int = bar()

        fun bar() = foo()
    }

    package c {
        fun bazz() = bar()

        fun foo() : Int = bazz()

        fun bar() = foo()
    }
}
